[tool.poetry]
name = "arena"
version = "0.1.0"
description = "An arena for students to build custom champions and do battle"
authors = ["Dan Gallo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pycodestyle = "^2.11.1"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
